[tool.poetry]
name = "loading"
version = "0.1.0"
description = ""
authors = ["yanlu <yanlu@student.42berlin.de>"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.1.0"
matplotlib = ">=3.7.2"
numpy = ">=1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"